--- a/pom.xml
+++ b/pom.xml
@@ -80,13 +80,13 @@
         <!--
         Dependencies
         -->
-        <assertj.version>3.11.1</assertj.version>
-        <auth0.jwt.version>3.4.0</auth0.jwt.version>
-        <commons.lang3.version>3.8.1</commons.lang3.version>
+        <assertj.version>3.18.1</assertj.version>
+        <auth0.jwt.version>3.11.0</auth0.jwt.version>
+        <commons.lang3.version>3.11</commons.lang3.version>
         <commons.io.version>2.6</commons.io.version>
-        <cxf.version>3.3.1</cxf.version>
-        <gson.version>2.8.5</gson.version>
-        <guava.version>20.0</guava.version>
+        <cxf.version>3.4.1</cxf.version>
+        <gson.version>2.8.6</gson.version>
+        <guava.version>30.0-jre</guava.version>
         <jackson.version>2.9.6</jackson.version>
 
         <jakarta.activation.version>1.2.1</jakarta.activation.version>
@@ -94,20 +94,20 @@
         <jakarta.ws.rs.version>2.1.5</jakarta.ws.rs.version>
         <jakarta.xml.bind.version>2.3.2</jakarta.xml.bind.version>
 
-        <johnzon.version>1.1.10</johnzon.version>
+        <johnzon.version>1.2.8</johnzon.version>
         <jsonb.version>1.0.1</jsonb.version>
         <jsonp.version>1.1.5</jsonp.version>
-        <junit.version>5.4.2</junit.version>
-        <lombok.version>1.18.4</lombok.version>
-        <mockito.version>2.21.0</mockito.version>
-        <protobuf.version>3.6.1</protobuf.version>
-        <reactor.version>3.2.3.RELEASE</reactor.version>
+        <junit.version>5.7.0</junit.version>
+        <lombok.version>1.18.16</lombok.version>
+        <mockito.version>3.6.0</mockito.version>
+        <protobuf.version>3.13.0</protobuf.version>
+        <reactor.version>3.4.0</reactor.version>
         <rxjava.version>2.2.2</rxjava.version>
         <servlet.api.version>3.1.0</servlet.api.version>
-        <slf4j.version>1.7.25</slf4j.version>
-        <spring.boot.version>2.1.3.RELEASE</spring.boot.version>
-        <swagger.version>1.5.22</swagger.version>
-        <swagger.ui.version>3.20.9</swagger.ui.version>
+        <slf4j.version>1.7.29</slf4j.version>
+        <spring.boot.version>2.4.0</spring.boot.version>
+        <swagger.version>1.6.2</swagger.version>
+        <swagger.ui.version>3.31.1</swagger.ui.version>
 
     </properties>
 
