--- a/logging/pom.xml
+++ b/logging/pom.xml
@@ -50,5 +50,11 @@
             <version>0.4.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jaxxy</groupId>
+            <artifactId>jaxxy-gson</artifactId>
+            <version>0.4.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
