--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,11 +1,11 @@
-name: Build sample Java Maven project
+name: Run Maven Build
 
 on: [push, pull_request]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Build Maven project
+    name: Maven Build
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
@@ -22,11 +22,16 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
+          server-id: sonatype-nexus-snapshots
+          server-username: NEXUS_OSS_USERNAME
+          server-password: NEXUS_OSS_PASSWORD
       - name: Maven Build
-        run: mvn clean verify sonar:sonar -Pcoverage -Dsonar.organization=jaxxy-rs -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
+        run: mvn clean verify sonar:sonar deploy -Pcoverage -Dsonar.organization=jaxxy-rs -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          NEXUS_OSS_USERNAME: ${{ secrets.NEXUS_OSS_USERNAME }}
+          NEXUS_OSS_PASSWORD: ${{ secrets.NEXUS_OSS_PASSWORD }}
 #      - name: Upload Maven build artifact
 #        uses: actions/upload-artifact@v1
 #        with:
