--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,7 +1,8 @@
 name: Run Maven Build
-
-on: [push, pull_request]
-
+on:
+  push:
+    branches:
+      - master
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -26,7 +27,7 @@ jobs:
           server-username: NEXUS_OSS_USERNAME
           server-password: NEXUS_OSS_PASSWORD
       - name: Maven Build
-        run: mvn clean verify sonar:sonar deploy -Pcoverage -Dsonar.organization=jaxxy-rs -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
+        run: mvn verify sonar:sonar deploy -Pcoverage -Dsonar.organization=jaxxy-rs -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
