--- a/pom.xml
+++ b/pom.xml
@@ -538,6 +538,10 @@
                                 </goals>
                             </execution>
                         </executions>
+                        <configuration>
+                            <keyname>${gpg.keyname}</keyname>
+                            <passphraseServerId>${gpg.keyname}</passphraseServerId>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
