--- a/rxjava/pom.xml
+++ b/rxjava/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.jaxxy</groupId>
         <artifactId>jaxxy</artifactId>
-        <version>0.4.0</version>
+        <version>0.4.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>jaxxy-rxjava</artifactId>
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>org.jaxxy</groupId>
             <artifactId>jaxxy-rx</artifactId>
-            <version>0.4.0</version>
+            <version>0.4.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -51,7 +51,7 @@
         <dependency>
             <groupId>org.jaxxy</groupId>
             <artifactId>jaxxy-test</artifactId>
-            <version>0.4.0</version>
+            <version>0.4.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
