--- a/example/pom.xml
+++ b/example/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.jaxxy</groupId>
         <artifactId>jaxxy</artifactId>
-        <version>0.4.1-SNAPSHOT</version>
+        <version>0.4.1</version>
     </parent>
 
     <artifactId>jaxxy-example</artifactId>
@@ -118,7 +118,7 @@
             <dependency>
                 <groupId>org.jaxxy</groupId>
                 <artifactId>jaxxy-bom</artifactId>
-                <version>0.4.1-SNAPSHOT</version>
+                <version>0.4.1</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
