--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,6 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -71,46 +70,44 @@
         <!--
         Maven Plugins
         -->
-        <os.maven.plugin.version>1.6.0</os.maven.plugin.version>
-        <protobuf.maven.plugin.version>0.5.1</protobuf.maven.plugin.version>
+        <os.maven.plugin.version>1.7.0</os.maven.plugin.version>
+        <protobuf.maven.plugin.version>0.6.1</protobuf.maven.plugin.version>
+        <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
 
         <!--
         Dependencies
         -->
-        <assertj.version>3.18.1</assertj.version>
-        <auth0.jwt.version>3.11.0</auth0.jwt.version>
-        <commons.lang3.version>3.11</commons.lang3.version>
-        <commons.io.version>2.6</commons.io.version>
-        <cxf.version>3.4.1</cxf.version>
-        <gson.version>2.8.6</gson.version>
-        <guava.version>30.0-jre</guava.version>
-        <jackson.version>2.12.0</jackson.version>
+        <assertj.version>3.23.1</assertj.version>
+        <auth0.jwt.version>4.0.0</auth0.jwt.version>
+        <commons.lang3.version>3.12.0</commons.lang3.version>
+        <commons.io.version>2.11.0</commons.io.version>
+        <cxf.version>3.5.3</cxf.version>
+        <gson.version>2.9.0</gson.version>
+        <guava.version>31.1-jre</guava.version>
+        <jackson.version>2.13.3</jackson.version>
 
-        <jakarta.activation.version>1.2.1</jakarta.activation.version>
-        <jakarta.annotation.version>1.3.4</jakarta.annotation.version>
-        <jakarta.ws.rs.version>2.1.5</jakarta.ws.rs.version>
-        <jakarta.xml.bind.version>2.3.2</jakarta.xml.bind.version>
+        <jakarta.activation.version>1.2.2</jakarta.activation.version>
+        <jakarta.annotation.version>1.3.5</jakarta.annotation.version>
+        <jakarta.ws.rs.version>2.1.6</jakarta.ws.rs.version>
+        <jakarta.xml.bind.version>2.3.3</jakarta.xml.bind.version>
+        <jakarta.servlet-api.version>4.0.4</jakarta.servlet-api.version>
 
-        <johnzon.version>1.2.8</johnzon.version>
-        <jsonb.version>1.0.1</jsonb.version>
-        <jsonp.version>1.1.5</jsonp.version>
-        <junit.version>5.7.0</junit.version>
-        <lombok.version>1.18.16</lombok.version>
-        <mockito.version>3.6.0</mockito.version>
-        <protobuf.version>3.20.1</protobuf.version>
-        <reactor.version>3.4.0</reactor.version>
-        <rxjava.version>2.2.2</rxjava.version>
-        <servlet.api.version>3.1.0</servlet.api.version>
-        <slf4j.version>1.7.29</slf4j.version>
-        <spring.boot.version>2.4.0</spring.boot.version>
-        <swagger.version>1.6.2</swagger.version>
-        <swagger.ui.version>3.31.1</swagger.ui.version>
-
+        <johnzon.version>1.2.18</johnzon.version>
+        <jsonb.version>1.0.2</jsonb.version>
+        <jsonp.version>1.1.6</jsonp.version>
+        <junit.version>5.8.2</junit.version>
+        <lombok.version>1.18.24</lombok.version>
+        <mockito.version>4.6.1</mockito.version>
+        <protobuf.version>3.21.2</protobuf.version>
+        <reactor.version>3.4.21</reactor.version>
+        <rxjava.version>2.2.21</rxjava.version>
+        <slf4j.version>1.7.36</slf4j.version>
+        <spring.boot.version>2.7.1</spring.boot.version>
+        <swagger.version>1.6.6</swagger.version>
+        <swagger.ui.version>4.11.1</swagger.ui.version>
     </properties>
 
     <modules>
-
-
         <module>cache</module>
         <module>cors</module>
         <module>example</module>
@@ -130,7 +127,6 @@
     </modules>
 
     <dependencies>
-
         <dependency>
             <groupId>jakarta.ws.rs</groupId>
             <artifactId>jakarta.ws.rs-api</artifactId>
@@ -143,7 +139,7 @@
 
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
+            <artifactId>slf4j-reload4j</artifactId>
         </dependency>
 
         <dependency>
@@ -163,18 +159,12 @@
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
         </dependency>
     </dependencies>
 
     <dependencyManagement>
         <dependencies>
-
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
@@ -205,7 +195,7 @@
             <dependency>
                 <groupId>jakarta.servlet</groupId>
                 <artifactId>jakarta.servlet-api</artifactId>
-                <version>4.0.2</version>
+                <version>${jakarta.servlet-api.version}</version>
             </dependency>
 
             <!--
@@ -216,7 +206,6 @@
                 <artifactId>jakarta.xml.bind-api</artifactId>
                 <version>${jakarta.xml.bind.version}</version>
             </dependency>
-
 
             <!--
             JSON-B (JSR 367)
@@ -356,7 +345,6 @@
                 <version>${swagger.version}</version>
             </dependency>
 
-
             <!--
             Testing
             -->
@@ -396,7 +384,7 @@
 
             <dependency>
                 <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-log4j12</artifactId>
+                <artifactId>slf4j-reload4j</artifactId>
                 <version>${slf4j.version}</version>
                 <scope>test</scope>
             </dependency>
@@ -410,13 +398,12 @@
         </dependencies>
     </dependencyManagement>
 
-
     <build>
         <pluginManagement>
             <plugins>
                 <plugin>
                     <artifactId>maven-clean-plugin</artifactId>
-                    <version>3.1.0</version>
+                    <version>3.2.0</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-resources-plugin</artifactId>
@@ -424,15 +411,15 @@
                 </plugin>
                 <plugin>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.1</version>
+                    <version>3.10.1</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.0.0-M5</version>
+                    <version>3.0.0-M7</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-jar-plugin</artifactId>
-                    <version>3.2.0</version>
+                    <version>3.2.2</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-install-plugin</artifactId>
@@ -440,7 +427,7 @@
                 </plugin>
                 <plugin>
                     <artifactId>maven-deploy-plugin</artifactId>
-                    <version>3.0.0-M1</version>
+                    <version>3.0.0-M2</version>
                     <configuration>
                         <deployAtEnd>true</deployAtEnd>
                         <retryFailedDeploymentCount>3</retryFailedDeploymentCount>
@@ -452,24 +439,24 @@
                 </plugin>
                 <plugin>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>3.2.0</version>
+                    <version>3.4.0</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-gpg-plugin</artifactId>
-                    <version>1.6</version>
+                    <version>3.0.1</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-release-plugin</artifactId>
-                    <version>3.0.0-M1</version>
+                    <version>3.0.0-M6</version>
                 </plugin>
                 <plugin>
                     <groupId>org.sonatype.plugins</groupId>
                     <artifactId>nexus-staging-maven-plugin</artifactId>
-                    <version>1.6.8</version>
+                    <version>1.6.13</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-site-plugin</artifactId>
-                    <version>3.9.1</version>
+                    <version>4.0.0-M2</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -560,7 +547,7 @@
                     <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
-                        <version>0.8.6</version>
+                        <version>${jacoco-maven-plugin.version}</version>
                         <executions>
                             <execution>
                                 <id>prepare-agent</id>
