--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
         <cxf.version>4.0.0</cxf.version>
         <gson.version>2.10</gson.version>
         <guava.version>31.1-jre</guava.version>
-        <jackson.version>2.12.0</jackson.version>
+        <jackson.version>2.14.1</jackson.version>
 
         <jakarta.activation.version>2.1.0</jakarta.activation.version>
         <jakarta.annotation.version>2.1.1</jakarta.annotation.version>
@@ -267,6 +267,14 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.fasterxml.jackson</groupId>
+                <artifactId>jackson-bom</artifactId>
+                <version>${jackson.version}</version>
+                <scope>import</scope>
+                <type>pom</type>
             </dependency>
 
             <dependency>
