--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>17</java.version>
+        <maven.compiler.release>17</maven.compiler.release>
 
         <!--
         Maven Plugins
