--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -10,19 +10,20 @@ jobs:
     if: "!contains(github.event.head_commit.message, '[maven-release-plugin] prepare release')"
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
       - name: Cache local Maven repository
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
       - name: Set up JDK 17
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
           java-version: 17
           server-id: sonatype-nexus-snapshots
           server-username: NEXUS_OSS_USERNAME
